--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				<nav id="nav">
 					<ul class="links">
 						<li><a href="index.html">Home</a></li>
-						<li><a href="Arrays.html">Arrays-ArrayLists</a></li>
+						<li><a href="Arrays-ArrayLists.html">Arrays-ArrayLists</a></li>
 						<li><a href="FileIO.html">File-IO</a></li>
 						<li><a href="Exception.html">Exceptions</a></li>
 						<li><a href="Interface.html">Interfaces</a></li>
