--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				<nav id="nav">
 					<ul class="links">
 						<li><a href="index.html">Home</a></li>
-						<li><a href="Arrays-ArrayLists.html">Arrays-ArrayLists</a></li>
+						<li><a href="Array-ArrayLists.html">Arrays-ArrayLists</a></li>
 						<li><a href="FileIO.html">File-IO</a></li>
 						<li><a href="Exception.html">Exceptions</a></li>
 						<li><a href="Interface.html">Interfaces</a></li>
@@ -79,12 +79,12 @@
                     <article>
                         <header>
                             <span class="date">April 24, 2017</span>
-                            <h2><a href="Exception.html">Arrays-ArrayLists</a></h2>
+                            <h2><a href="Array-ArrayLists.html">Arrays-ArrayLists</a></h2>
                         </header>
                         <a href="#" class="image fit"><img src="images/Arrays.jpg" alt="" /></a>
                         <p>An overview of Arrays and ArrayLists, focusing on their differences, usage, and when each is most appropriate in Java programming.</p>
                         <ul class="actions special">
-                            <li><a href="Exception.html" class="button">Study</a></li>
+                            <li><a href="Array-ArrayLists.html" class="button">Study</a></li>
                         </ul>
                     </article>
                     <article>
